sliding speed discrease

--- a/index.html
+++ b/index.html
@@ -29,14 +29,23 @@
                         <div class="image-holder">
                             <!-- owl carousel -->
                             <div class="owl-carousel">
-                                <div class="carousel-opt1">
+                                <div class="carousel-opt">
                                     <img src="img/01.jpg" alt="image">
+                                    <p style="display: none;" class="khalid">
+                                        hey how are you ... i am here...
+                                    </p>
                                 </div>
-                                <div class="carousel-opt2">
+                                <div class="carousel-opt">
                                     <img src="img/02.jpg" alt="image">
+                                    <p style="display: none;" class="khalid">
+                                        whats your favorite food is
+                                    </p>
                                 </div>
-                                <div class="carousel-opt3">
+                                <div class="carousel-opt">
                                     <img src="img/03.jpg" alt="image">
+                                    <p style="display: none;" class="khalid">
+                                        where are you going
+                                    </p>
                                 </div>
                             </div>
                         </div>
