upload content div

--- a/index.html
+++ b/index.html
@@ -31,21 +31,27 @@
                             <div class="owl-carousel">
                                 <div class="carousel-opt">
                                     <img src="img/01.jpg" alt="image">
-                                    <p style="display: none;" class="khalid">
-                                        hey how are you ... i am here...
-                                    </p>
+                                    <div class="content" style="display: none;">
+                                        <p class="content">
+                                            where are you going...
+                                        </p>
+                                    </div>
                                 </div>
                                 <div class="carousel-opt">
                                     <img src="img/02.jpg" alt="image">
-                                    <p style="display: none;" class="khalid">
-                                        whats your favorite food is
-                                    </p>
+                                    <div class="content" style="display: none;">
+                                        <p class="content">
+                                            hei how are you ... i am here
+                                        </p>
+                                    </div>
                                 </div>
                                 <div class="carousel-opt">
                                     <img src="img/03.jpg" alt="image">
-                                    <p style="display: none;" class="khalid">
-                                        where are you going
-                                    </p>
+                                    <div class="content" style="display: none;">
+                                        <p class="content">
+                                            what's happening with you...
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
